--- a/package.json
+++ b/package.json
@@ -1,22 +1,12 @@
 {
   "name": "liri-node-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "keys.js",
+  "description": "node app to search for bands, music, and movies",
+  "main": "liri.js",
+  "homepage": "https://github.com/mmnos/liri-node-app#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mmnos/liri-node-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mmnos/liri-node-app/issues"
-  },
-  "homepage": "https://github.com/mmnos/liri-node-app#readme",
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
